# ligate-chain

./: .gitignore  .pre-commit-config.yaml  .versions-paths.txt  .versions.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  README.md  SECURITY.md  audit.toml  clippy.toml  codecov.yml  constants.toml  deny.toml  fix-issue-348.txt  output.md  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bump-versions.yml  ci.yml  cla.yml  docker-scan.yml  docker.yml  fuzz.yml  genesis-determinism.yml  local-celestia-e2e.yml  mocha-smoke.yml  prove.yml  release.yml
archive/ligate-devnet-1/: .gitignore  README.md  celestia.toml
archive/ligate-devnet-1/genesis/: accounts.json
archive/ligate-devnet-2/: README.md  canonical-schemas.toml.example
archive/ligate-devnet-2/genesis/: operator_incentives.json  sequencer_registry.json
crates/bootstrap-cli/: Cargo.toml
crates/bootstrap-cli/examples/: disc_probe.rs
crates/bootstrap-cli/src/: config.rs  main.rs  register.rs  shape_hash.rs
crates/client-rs/: Cargo.toml  README.md
crates/client-rs/src/: lib.rs  submit.rs
crates/genesis-tool/: Cargo.toml
crates/genesis-tool/src/: keys.rs  main.rs
crates/genesis-tool/tests/: integration.rs
crates/modules/: Cargo.toml
crates/modules/attestation/: Cargo.toml
crates/modules/attestation/fuzz/: Cargo.toml
crates/modules/attestation/fuzz/fuzz_targets/: attestation_id_parse.rs  bech32_id.rs  borsh_attestation.rs  borsh_attestor_set.rs  borsh_call_message.rs  borsh_schema.rs  borsh_signed_payload.rs  rest_attestation_path.rs  rest_attestor_set_path.rs  rest_schema_path.rs
crates/modules/attestation/src/: lib.rs  metrics.rs  query.rs
crates/modules/attestation/tests/: borsh_snapshot.rs  integration.rs  proptest_codecs.rs  smoke.rs  unit.rs
crates/modules/bounty/: Cargo.toml
crates/modules/bounty/src/: lib.rs  metrics.rs  query.rs
crates/modules/bounty/tests/: integration.rs  lifecycle.rs
crates/modules/contract/: Cargo.toml
crates/modules/contract/src/: lib.rs  metrics.rs  query.rs
crates/modules/contract/tests/: integration.rs  lifecycle.rs
crates/modules/src/: lib.rs
crates/rollup/: Cargo.toml
crates/rollup/provers/risc0/: Cargo.toml  build.rs
crates/rollup/provers/risc0/guest-celestia/: Cargo.toml
crates/rollup/provers/risc0/src/: lib.rs
crates/rollup/src/: celestia_rollup.rs  chain_config.rs  cluster.rs  follower_guard.rs  health.rs  info.rs  lib.rs  main.rs  metrics.rs  mock_rollup.rs
crates/rollup/tests/: binary_spawn_smoke.rs  blueprint_smoke.rs  chain_hash_pin.rs  devnet_config.rs  e2e_smoke.rs  health_smoke.rs  info_smoke.rs  localnet_config.rs  metrics_smoke.rs  restart_recovery.rs
crates/schemas/themisra-pop/: Cargo.toml
crates/schemas/themisra-pop/src/: lib.rs
crates/stf/: Cargo.toml  build.rs
crates/stf-declaration/: Cargo.toml
crates/stf-declaration/src/: lib.rs
crates/stf/src/: genesis_config.rs  hooks_impl.rs  lib.rs  runtime.rs  runtime_capabilities.rs  test_utils.rs  tests.rs
crates/stf/tests/: devnet_addresses.rs  localnet_addresses.rs
devnet/: .gitignore  README.md  celestia.toml  keys.toml.example  local-dev-key.json  rollup.toml
devnet-1/: .gitignore  README.md  canonical-schemas.toml.example  celestia.toml  keys.toml.example
devnet-1/genesis/: attestation.json  attester_incentives.json  bank.json  chain_state.json  operator_incentives.json  prover_incentives.json  sequencer_registry.json
devnet/genesis/: attestation.json  attester_incentives.json  bank.json  operator_incentives.json  prover_incentives.json  sequencer_registry.json
docs/audits/: README.md
docs/development/: README.md  canonical-schema-registration.md  celestia-ops.md  cost-monitoring.md  devnet.md  docker.md  error-coverage.md  follower-bootstrap.md  genesis-determinism.md  genesis.example.json  public-devnet-deploy.md  quickstart-partner.md  snapshot-bootstrap.md
docs/development/runbooks/: backup-restore.md  celestia-light-node.md  chain-id-bump.md  chain-upgrade.md  da-signer-rotation.md  disaster-recovery.md  faucet-ops.md  gcp-audit-logs.md  gcp-billing-export.md  incident-response.md  log-shipping.md  mocha-smoke.md  multi-sequencer-failover.md  operator-key-rotation.md  sequencer-key-rotation.md
docs/protocol/: addresses-and-signing.md  attestation-v0.md  bounty-marketplace.md  contract-primitive.md  da-layers.md  key-management.md  pre-testnet-economics.md  prompt-evaluation-pool.md  rest-api.md  sequencer-decentralisation.md  staking-roadmap.md  threat-model.md  upgrades.md
docs/protocol/lips/: README.md  lip-1.md  lip-template.md
docs/protocol/schemas/: README.md  themisra.proof-of-prompt-v1.json
examples/: .env.example  README.md  docker-compose.yaml
localnet/: README.md  celestia.toml  local-dev-key.json  rollup.toml
monitoring/grafana/: README.md  ligate-chain.json  ligate-devnet-1-cost.json  ligate-investor.json  ligate-operator.json
ops/backup/: backup.env.example  gcs-lifecycle.json  gcs-snapshot-lifecycle.json
ops/backup/sudoers.d/: ligate-backup
ops/backup/systemd/: ligate-backup-daily.timer  ligate-backup-hourly.timer  ligate-backup-weekly.timer  ligate-backup.service  ligate-backup@.service  ligate-snapshot-publish.service  ligate-snapshot-publish.timer
ops/billing/: gcp-cost-fetch.sh
ops/caddy/: Caddyfile
ops/cloud-init/: render-rollup-toml.sh  sequencer.yaml
ops/genesis-determinism/: substitutions.toml
ops/grafana/: README.md  ligate-cost.json  ligate-devnet-1-cost.json  ligate-investor.json  ligate-node.json  ligate-operator.json
ops/install/: swagger-ui-dist.sh
ops/logging/: fluent-bit.conf  parsers.conf
ops/prometheus/: alertmanager.yaml  alerts.yaml
ops/systemd/: ligate-auto-upgrade.service  ligate-auto-upgrade.timer
scripts/: auto-upgrade.sh  backup-rocksdb.sh  check-da-isolation.sh  import-snapshot.sh  publish-snapshot.sh  restore-drill.sh  restore-rocksdb.sh  upgrade-chain.sh
signatures/version1/: cla.json
(+19 files in other folders)
