[workspace]
resolver = "2"
members = [
    "crates/modules/attestation",
    "crates/client-rs",
    "crates/rollup",
    "crates/stf",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Ligate Labs <hello@ligate.io>"]
repository = "https://github.com/ligate-io/ligate-chain"
homepage = "https://ligate.io"
publish = false
rust-version = "1.93"

[workspace.dependencies]
# Sovereign SDK — pinned to the same rev that `sov-rollup-starter` uses.
# v0.3-era (known-compiling baseline). Bump alongside SDK upgrades.
sov-rollup-interface       = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f89964c66bcfb6a31712e43278378b54c33d3779" }
sov-modules-api            = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f89964c66bcfb6a31712e43278378b54c33d3779" }
sov-modules-stf-blueprint  = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f89964c66bcfb6a31712e43278378b54c33d3779" }
sov-modules-rollup-blueprint = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f89964c66bcfb6a31712e43278378b54c33d3779" }
sov-state                  = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f89964c66bcfb6a31712e43278378b54c33d3779" }
sov-stf-runner             = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f89964c66bcfb6a31712e43278378b54c33d3779" }
sov-bank                   = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f89964c66bcfb6a31712e43278378b54c33d3779" }
sov-accounts               = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f89964c66bcfb6a31712e43278378b54c33d3779" }
sov-address                = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f89964c66bcfb6a31712e43278378b54c33d3779" }
sov-attester-incentives    = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f89964c66bcfb6a31712e43278378b54c33d3779" }
sov-blob-storage           = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f89964c66bcfb6a31712e43278378b54c33d3779" }
sov-capabilities           = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f89964c66bcfb6a31712e43278378b54c33d3779" }
sov-chain-state            = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f89964c66bcfb6a31712e43278378b54c33d3779" }
sov-kernels                = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f89964c66bcfb6a31712e43278378b54c33d3779" }
sov-operator-incentives    = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f89964c66bcfb6a31712e43278378b54c33d3779" }
sov-prover-incentives      = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f89964c66bcfb6a31712e43278378b54c33d3779" }
sov-sequencer-registry     = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f89964c66bcfb6a31712e43278378b54c33d3779" }
sov-uniqueness             = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f89964c66bcfb6a31712e43278378b54c33d3779" }
sov-mock-da                = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f89964c66bcfb6a31712e43278378b54c33d3779" }
sov-mock-zkvm              = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f89964c66bcfb6a31712e43278378b54c33d3779" }
sov-db                     = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f89964c66bcfb6a31712e43278378b54c33d3779" }
sov-rollup-full-node-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f89964c66bcfb6a31712e43278378b54c33d3779" }
sov-sequencer              = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f89964c66bcfb6a31712e43278378b54c33d3779" }
sov-test-utils             = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f89964c66bcfb6a31712e43278378b54c33d3779" }

# Shared workspace dependencies. Versions track the SDK's own
# `Cargo.toml` to avoid feature-graph divergence.
anyhow     = "1.0.95"
thiserror  = "2"
serde      = { version = "1.0.208", default-features = false, features = ["derive", "alloc", "rc"] }
serde_json = "1.0"
tracing    = "0.1"
# borsh 1.x; the SDK upgraded from 0.10.x in #59. Our types using
# `try_to_vec`/`try_from_slice` migrate to `borsh::to_vec`/`borsh::from_slice`.
borsh      = { version = "1", features = ["derive"] }
schemars   = { version = "0.8.21", features = ["derive"] }
sha2       = { version = "=0.10.9", default-features = false }
strum      = { version = "0.26.3", features = ["derive"] }
ed25519-dalek = { version = "=2.1.1", default-features = false }
# jsonrpsee version may need bumping; we'll find out during the
# upgrade. Keeping the v0.20.1 pin for now.
jsonrpsee  = { version = "0.20.1", features = ["jsonrpsee-types", "macros", "server", "http-client"] }
tempfile   = "3.8"
# Async + CLI plumbing for the rollup binary. Versions track the SDK
# workspace's own `Cargo.toml` to avoid feature-graph divergence.
async-trait = "0.1"
clap        = { version = "4", features = ["derive"] }
tokio       = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
rustls      = { version = "0.23", default-features = false, features = ["ring"] }

[profile.release]
lto = "thin"
codegen-units = 1

# `ligate-node` pulls in the full SDK + tokio + hyper + rocksdb + ring
# rlib graph. With full DWARF debug info, the link step OOMs on the
# free-tier GitHub Actions runner (`collect2: ld terminated with
# signal 7 [Bus error]`). `line-tables-only` keeps file/line
# information for stack traces but drops type-DIE bloat — a few GB
# off the link working set, no observable hit to debuggability for
# panic backtraces.
[profile.dev]
debug = "line-tables-only"
