[workspace]
resolver = "2"
members = [
    "crates/bootstrap-cli",
    "crates/modules/attestation",
    "crates/client-rs",
    "crates/genesis-tool",
    "crates/rollup",
    "crates/rollup/provers/risc0",
    "crates/stf",
    "crates/stf-declaration",
]
# `crates/rollup/provers/risc0/guest-celestia/` is excluded —
# it's a separate cargo workspace targeting the risc0 RISC-V
# triple, not our host toolchain. The outer `provers/risc0/`
# crate compiles it via `risc0-build`.
#
# `crates/modules/attestation/fuzz/` is excluded because cargo-fuzz
# crates require nightly + libfuzzer-sys, which doesn't build on
# stable. Run via `cargo +nightly fuzz build/run` from inside the
# fuzz dir. Tracking issue: #119.
exclude = [
    "crates/rollup/provers/risc0/guest-celestia",
    "crates/modules/attestation/fuzz",
]

[workspace.package]
version = "0.2.14"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Ligate Labs <hello@ligate.io>"]
repository = "https://github.com/ligate-io/ligate-chain"
homepage = "https://ligate.io"
publish = false
rust-version = "1.93"

[workspace.dependencies]
# Sovereign SDK — pinned to the same rev that `sov-rollup-starter` uses.
# v0.3-era (known-compiling baseline). Bump alongside SDK upgrades.
sov-rollup-interface       = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-modules-api            = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-modules-stf-blueprint  = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-modules-rollup-blueprint = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-state                  = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-stf-runner             = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-full-node-configs      = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-bank                   = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-accounts               = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-address                = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-attester-incentives    = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-blob-sender            = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-blob-storage           = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-capabilities           = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-chain-state            = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-kernels                = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-operator-incentives    = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-prover-incentives      = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-sequencer-registry     = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-uniqueness             = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-mock-da                = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-build                  = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-celestia-adapter       = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-mock-zkvm              = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-risc0-adapter          = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a", default-features = false }
sov-zkvm-utils             = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-db                     = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-rollup-apis            = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-rollup-full-node-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-sequencer              = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-node-client            = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-api-spec               = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-test-utils             = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }

# Shared workspace dependencies. Versions track the SDK's own
# `Cargo.toml` to avoid feature-graph divergence.
anyhow     = "1.0.95"
thiserror  = "2"
serde      = { version = "1.0.208", default-features = false, features = ["derive", "alloc", "rc"] }
serde_json = "1.0"
tracing    = "0.1"
# borsh 1.x; the SDK upgraded from 0.10.x in #59. Our types using
# `try_to_vec`/`try_from_slice` migrate to `borsh::to_vec`/`borsh::from_slice`.
borsh      = { version = "1", features = ["derive"] }
schemars   = { version = "0.8.21", features = ["derive"] }
sha2       = { version = "=0.11.0", default-features = false }
strum      = { version = "0.26.3", features = ["derive"] }
ed25519-dalek = { version = "=2.1.1", default-features = false }
# jsonrpsee version may need bumping; we'll find out during the
# upgrade. Keeping the v0.20.1 pin for now.
jsonrpsee  = { version = "0.20.1", features = ["jsonrpsee-types", "macros", "server", "http-client"] }
tempfile   = "3.8"
# Async + CLI plumbing for the rollup binary. Versions track the SDK
# workspace's own `Cargo.toml` to avoid feature-graph divergence.
async-trait = "0.1"
clap        = { version = "4", features = ["derive"] }
tokio       = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
rustls      = { version = "0.23", default-features = false, features = ["ring"] }
# Prometheus + axum for the `/metrics` endpoint (#110). Both already
# present in the dep tree via SDK transitives; we explicitly pin via
# the workspace so direct uses don't silently shift on SDK rev bumps.
prometheus  = { version = "0.14", default-features = false }
axum        = { version = "0.8", default-features = false, features = ["tokio", "http1"] }
# Risc0 toolchain versions track the SDK workspace.
risc0-zkvm          = { version = "3.0", default-features = false }
risc0-zkvm-platform = "2.2"
risc0-build         = "3.0"

[profile.release]
lto = "thin"
codegen-units = 1

# Drop debug info on the dev profile.
#
# Why: linking any of our test binaries (`ligate-stf`,
# `ligate-client`, `ligate-rollup`) pulls in the full SDK + tokio +
# hyper + rocksdb + ring rlib graph. Each rlib carries its own
# DWARF tree; the cumulative working set blows past what the
# free-tier GitHub Actions runner can mmap, and the linker SIGBUSes
# (`collect2: ld terminated with signal 7 [Bus error]`) when a
# truncated read on a mmap'd .o slips through.
#
# `debug = 0` strips debug info entirely — no line numbers in
# panics, no source-level debugging — but cuts CI link memory
# dramatically. Worth it: pre-launch we tail logs in CI, and a
# local override (`CARGO_PROFILE_DEV_DEBUG=2 cargo test`) restores
# debugging when needed.
[profile.dev]
debug = 0

# ----------------------------------------------------------------------------
# Sovereign SDK fork (`ligate-io/sovereign-sdk`)
# ----------------------------------------------------------------------------
#
# Every `sov-*` dep above resolves to our fork's `ligate-mainline` branch
# instead of `Sovereign-Labs/sovereign-sdk@<rev>`. The fork carries patches
# that aren't (yet) upstream:
#
# - `Sequencer::pending_tx_count()` for operator metrics (PR Sovereign-Labs/sovereign-sdk#2838)
# - Typed `BlobSubmissionError` variant on `BlobSubmissionStatus` (PR Sovereign-Labs/sovereign-sdk#2839)
# - `LtxHash` / `LblkHash` / `LsrHash` bech32m-encoded hash types
#   (`pub type TxHash = LtxHash` so partner-facing tx hashes display as
#   `ltx1...` instead of `0x...`)
#
# Pinned to a specific commit so chain rebuilds are reproducible. When
# the fork advances (rebased on a new upstream tip, new patches added),
# bump this `rev` in a deliberate PR — never let it move under the chain.
#
# Rebase discipline + workflow lives in the fork's CONTRIBUTING.md.
[patch."https://github.com/Sovereign-Labs/sovereign-sdk.git"]
sov-accounts                   = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-address                    = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-api-spec                   = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-attester-incentives        = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-bank                       = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-blob-sender                = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-blob-storage               = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-build                      = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-capabilities               = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-celestia-adapter           = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-chain-state                = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-db                         = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-kernels                    = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-mock-da                    = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-mock-zkvm                  = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-modules-api                = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-modules-rollup-blueprint   = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-modules-stf-blueprint      = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-node-client                = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-operator-incentives        = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-prover-incentives          = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-risc0-adapter              = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-rollup-apis                = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-rollup-full-node-interface = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-rollup-interface           = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-sequencer                  = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-sequencer-registry         = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-state                      = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-stf-runner                 = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-full-node-configs          = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-test-utils                 = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-uniqueness                 = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
sov-zkvm-utils                 = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "ffff9dfe6b615d8fbb1f71515adc760e295eb7a5" }
