[package]
name = "ligate-bootstrap-cli"
description = "Operator post-genesis bootstrap: register canonical schemas and attestor sets"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[[bin]]
name = "ligate-bootstrap"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
borsh.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
toml = "0.8"

# The chain's runtime + spec types. We construct
# `RuntimeCall::Attestation(...)` payloads with the same types the
# `ligate-node` binary executes, so a successful borsh round-trip
# here means a successful borsh round-trip on the chain.
attestation     = { path = "../modules/attestation", features = ["native"] }
ligate-client   = { path = "../client-rs", features = ["submit"] }
ligate-rollup   = { path = "../rollup" }
ligate-stf      = { path = "../stf", features = ["native"] }
sov-modules-api = { workspace = true, features = ["native"] }

[dev-dependencies]
tempfile.workspace = true
