[package]
name = "ligate-client"
description = "Ligate Labs rollup Rust client SDK"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
attestation     = { path = "../modules/attestation" }
sov-modules-api = { workspace = true }
sov-bank        = { workspace = true }

borsh.workspace = true
ed25519-dalek.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
sov-test-utils  = { workspace = true }
