[package]
name = "ligate-genesis-tool"
description = "Operator tool for generating + verifying Ligate Chain genesis bundles"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[[bin]]
name = "ligate-genesis-tool"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = "0.8"

# The chain's spec types and genesis loader. We use the production
# spec (`MockRollupSpec<Native>`) so the tool round-trips the same
# JSON shape the rollup binary consumes.
ligate-rollup = { path = "../rollup" }
ligate-stf = { path = "../stf", features = ["native"] }
sov-modules-api = { workspace = true, features = ["native"] }

[dev-dependencies]
tempfile.workspace = true
