[package]
name = "ligate-genesis-tool"
description = "Operator tool for generating + verifying Ligate Chain genesis bundles"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[[bin]]
name = "ligate-genesis-tool"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = "1.1"

# The chain's spec types and genesis loader. We use the production
# spec (`MockRollupSpec<Native>`) so the tool round-trips the same
# JSON shape the rollup binary consumes.
ligate-rollup = { path = "../rollup" }
ligate-stf = { path = "../stf", features = ["native"] }
sov-modules-api = { workspace = true, features = ["native"] }

# Crypto primitives for the `keys generate` subcommand. ed25519-dalek
# and sha2 are workspace-pinned with `default-features = false`; the
# bare API (`SigningKey::from_bytes`, `Sha256::digest`) is available
# without enabling extra features. rand 0.8 + hex 0.4 are pulled in
# transitively already so adding them as direct deps costs no extra
# build time.
ed25519-dalek.workspace = true
sha2.workspace = true
rand = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile.workspace = true
