[package]
name = "ligate-genesis-tool"
description = "Operator tool for generating + verifying Ligate Chain genesis bundles"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[[bin]]
name = "ligate-genesis-tool"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = "1.1"

# The chain's spec types and genesis loader. We use the production
# spec (`MockRollupSpec<Native>`) so the tool round-trips the same
# JSON shape the rollup binary consumes.
ligate-rollup = { path = "../rollup" }
ligate-stf = { path = "../stf", features = ["native"] }
sov-modules-api = { workspace = true, features = ["native"] }

# Crypto primitives for the `keys generate` subcommand. ed25519-dalek
# and sha2 are workspace-pinned with `default-features = false`; the
# bare API (`SigningKey::from_bytes`, `Sha256::digest`) is available
# without enabling extra features. `getrandom` 0.3 is pulled in
# transitively already (via rand_core 0.9 + others) so adding it as a
# direct dep costs no extra build time; it gives us a 2-line
# CSPRNG-fill that doesn't pin us to a particular `rand` major
# version's `OsRng` shape (rand 0.9 dropped `rand::rngs::OsRng`, 0.10
# would re-shape again — getrandom is stable across all of that).
ed25519-dalek.workspace = true
sha2.workspace = true
getrandom = "0.3"
hex = "0.4"

[dev-dependencies]
tempfile.workspace = true
