[package]
name = "ligate-modules"
description = "Ligate Labs rollup modules (attestation, token, ...)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
