[package]
name = "ligate-rollup"
description = "Ligate Chain rollup binary: full node + sequencer for the ligate-stf runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[[bin]]
name = "ligate-node"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
borsh.workspace = true
clap.workspace = true
rustls.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

# SDK glue. All `native`-flavoured because this is a node binary,
# never a guest.
sov-address                    = { workspace = true, features = ["evm", "native"] }
sov-bank                       = { workspace = true, features = ["native"] }
sov-db                         = { workspace = true }
sov-kernels                    = { workspace = true, features = ["native"] }
sov-celestia-adapter           = { workspace = true, features = ["native"] }
sov-mock-da                    = { workspace = true, features = ["native"] }
sov-mock-zkvm                  = { workspace = true, features = ["native"] }
sov-risc0-adapter              = { workspace = true, default-features = false, features = ["native"] }
ligate-prover-risc0            = { path = "provers/risc0" }
sov-modules-api                = { workspace = true, features = ["native"] }
sov-modules-rollup-blueprint   = { workspace = true, features = ["native"] }
sov-modules-stf-blueprint      = { workspace = true, features = ["native"] }
sov-rollup-full-node-interface = { workspace = true }
sov-rollup-interface           = { workspace = true, features = ["native"] }
sov-sequencer                  = { workspace = true }
sov-state                      = { workspace = true, features = ["native"] }
sov-stf-runner                 = { workspace = true }

# The Ligate Chain runtime — pulled in with `native` so the
# `runtime_capabilities` module (Runtime/HasCapabilities/HasKernel
# trait impls) is available to the blueprint.
ligate-stf = { path = "../stf", features = ["native"] }

# Direct path dep so main.rs can call `attestation::metrics::init()`
# at startup. The `native` feature pulls in the Prometheus counter
# definitions; the rest of the binary already gets the type via the
# ligate-stf chain.
attestation = { path = "../modules/attestation", features = ["native"] }

# Prometheus + axum for the `/metrics` endpoint (issue #110, Phase 1).
# axum runs in its own tokio task next to the SDK's REST server so we
# don't have to touch the blueprint's router setup.
prometheus = { workspace = true, features = ["process"] }
axum       = { workspace = true }

[dev-dependencies]
reqwest         = { version = "0.12", default-features = false, features = ["rustls-tls"] }
ed25519-dalek   = { workspace = true }
serde_json      = { workspace = true }
sov-test-utils  = { workspace = true }
tempfile        = { workspace = true }
# Re-list ligate-stf with the `test-utils` feature so the e2e smoke
# tests get the `MinimalGenesis` impl on the production runtime that
# `TestRunner` requires. Cargo unions this with the [dependencies]
# entry above for test builds.
ligate-stf      = { path = "../stf", features = ["test-utils"] }
# `sov-celestia-adapter` already lives in `[dependencies]`, so the
# integration tests can use it directly.
